# CI-techno

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  main.c
include/: tetra.h
src/: main.c  tetra.c
test/: CMakeLists.txt  test.cpp
